--- a/index.html
+++ b/index.html
@@ -5,14 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Taskier</title>
+
+    <link href='dependencies/fullcalendar/packages/core/main.css' rel='stylesheet' />
+    <link href='dependencies/fullcalendar/packages/daygrid/main.css' rel='stylesheet' />
+
+    <script src='dependencies/fullcalendar/packages/core/main.js'></script>
+    <script src='dependencies/fullcalendar/packages/daygrid/main.js'></script>
+
     <link rel="stylesheet" href="styles/_.css">
+    <title>Taskier</title>
 </head>
 
 <body>
     <h1>Taskier</h1>
+    <main>
+
+        <div id='calendar'></div>
+
+    </main>
 </body>
 
+
+
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var calendarEl = document.getElementById('calendar');
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+            // register plugin
+            plugins: ['dayGrid'],
+        });
+
+        calendar.render();
+    });
+</script>
 <script src="scripts/task_controller.js" type="text/javascript"></script>
 
 </html>
