--- a/index.html
+++ b/index.html
@@ -1,102 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link
+      href="dependencies/fullcalendar/packages/core/main.css"
+      rel="stylesheet"
+    />
+    <link
+      href="dependencies/fullcalendar/packages/daygrid/main.css"
+      rel="stylesheet"
+    />
 
-    <link href='dependencies/fullcalendar/packages/core/main.css' rel='stylesheet' />
-    <link href='dependencies/fullcalendar/packages/daygrid/main.css' rel='stylesheet' />
+    <script src="dependencies/fullcalendar/packages/core/main.js"></script>
+    <script src="dependencies/fullcalendar/packages/daygrid/main.js"></script>
 
-    <script src='dependencies/fullcalendar/packages/core/main.js'></script>
-    <script src='dependencies/fullcalendar/packages/daygrid/main.js'></script>
-
-    <link rel="stylesheet" href="styles/_.css">
+    <link rel="stylesheet" href="styles/_.css" />
     <title>Taskier</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1 id="title">Taskier</h1>
     <main>
-        <div class="wrapper">
-            <div class="column-one">
-                <div id="task">
-                    <div class="task__item">
-                        <span class="task__item__header">
-                            <h3 class="task__item__title">Study python</h3>
-                            <p class="task__item__time">12:23pm</p>
-                        </span>
+      <div class="wrapper">
+        <section id="task_wrapper">
+          <div id="taskWrapper__tasks">
+            <div id="taskWrapperTasks__item">
+              <div id="taskWrapperTasksItem__header">
+                <h3>Study python</h3>
+                <p>12:23pm</p>
+              </div>
 
-                        <span class="action_button_group">
-                            <button class="abg__edit_btn">edit</button>
-                            <button class="abg__complete_btn">complete</button>
-                            <button class="abg__delete_btn">delete</button>
-                        </span>
-                    </div>
-                    <div class="task__item">
-                        <span class="task__item__header">
-                            <h3 class="task__item__title">Take a walk</h3>
-                            <p class="task__item__time">1:00pm</p>
-                        </span>
-
-                        <span class="action_button_group">
-                            <button class="abg__edit_btn">edit</button>
-                            <button class="abg__complete_btn">complete</button>
-                            <button class="abg__delete_btn">delete</button>
-                        </span>
-                    </div>
-                    <div class="task__item">
-                        <span class="task__item__header">
-                            <h3 class="task__item__title">Play xbox</h3>
-                            <p class="task__item__time">2:30pm</p>
-                        </span>
-
-                        <span class="action_button_group">
-                            <button class="abg__edit_btn">edit</button>
-                            <button class="abg__complete_btn">complete</button>
-                            <button class="abg__delete_btn">delete</button>
-                        </span>
-                    </div>
-                    <div class="task__item">
-                        <span class="task__item__header">
-                            <h3 class="task__item__title">Study eloquent javascript</h3>
-                            <p class="task__item__time">2:30pm</p>
-                        </span>
-
-                        <span class="action_button_group">
-                            <button class="abg__edit_btn">edit</button>
-                            <button class="abg__complete_btn">complete</button>
-                            <button class="abg__delete_btn">delete</button>
-                        </span>
-                    </div>
-                </div>
-
-                <div id="add_task_btn">+</div>
+              <span class="action_button_group">
+                <button class="abg__edit_btn">edit</button>
+                <button class="abg__complete_btn">complete</button>
+                <button class="abg__delete_btn">delete</button>
+              </span>
             </div>
+          </div>
 
-            <div class="column-two">
-                <div id='calendar'></div>
-            </div>
-        </div>
+          <div id="add_task_btn">+</div>
+        </section>
+
+        <section class="column-two">
+          <div id="calendar"></div>
+        </section>
+      </div>
     </main>
-</body>
+  </body>
 
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      var calendarEl = document.getElementById("calendar");
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+        // register plugin
+        plugins: ["dayGrid"],
+        width: 200
+      });
 
-
-
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var calendarEl = document.getElementById('calendar');
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-            // register plugin
-            plugins: ['dayGrid'],
-            width: 200,
-        });
-
-        calendar.render();
+      calendar.render();
     });
-</script>
-<script src="scripts/task_controller.js" type="text/javascript"></script>
-
+  </script>
+  <script src="scripts/task_controller.js" type="text/javascript"></script>
 </html>
