--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="dependencies/fullcalendar/packages/core/main.js"></script>
     <script src="dependencies/fullcalendar/packages/daygrid/main.js"></script>
 
-    <link rel="stylesheet" href="styles/_.css" />
+    <link rel="stylesheet" href="/assets/styles/_.css" />
     <title>Taskier</title>
   </head>
 
@@ -63,5 +63,8 @@
       calendar.render();
     });
   </script>
-  <script src="scripts/task_controller.js" type="text/javascript"></script>
+  <script
+    src="/assets/scripts/task_controller.js"
+    type="text/javascript"
+  ></script>
 </html>
