--- a/index.html
+++ b/index.html
@@ -229,6 +229,6 @@
   </main>
 </body>
 
-<script src="main.js" type="text/javascript"></script>
+<script src="./dist/main.js" type="text/javascript"></script>
 
 </html>
