Include repo link to promote contribution

--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@
       </div>
 
   </main>
+
+
+  <footer>
+    <p>contribute to <a href="https://github.com/spaceofmiah/taskier">project</a></p>
+  </footer>
 </body>
 
 <script src="./dist/main.js" type="text/javascript"></script>
