Add Meta tag describing application

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="../src/styles/fontawesome.css">
+  <meta name="description" content="Easily keep track of tasks and manage existing tasks using taskier. 
+  Taskier is a simple task management application, which helps you track a task so that you never forget it or 
+  miss task accomplishing date." />
+  <link rel="stylesheet" href="../src/styles/fontawesome.css" />
   <link rel="stylesheet" href="../src/styles/main.css" />
   <title>Taskier</title>
 </head>
@@ -230,7 +233,7 @@
 
 
   <footer>
-    <p>contribute to <a href="https://github.com/spaceofmiah/taskier">project</a></p>
+    <p>contribute to <a href="https://github.com/spaceofmiah/taskier" target="_blank">project</a></p>
   </footer>
 </body>
 
