Add Meta tag for search engine keywords

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="keywords" content="task management, task, simple task management app, task management app, 
+  productivity app, task tracker, task tracker app">
   <meta name="description" content="Easily keep track of tasks and manage existing tasks using taskier. 
   Taskier is a simple task management application, which helps you track a task so that you never forget it or 
   miss task accomplishing date." />
